# perchat

./: Cargo.toml  README.md
src/: .env  main.rs
src/axum_handlers/: mod.rs
src/ws/: handler.rs  mod.rs  publish.rs  ws.rs
static/: chat.html
